<resources>
    <string name="app_name">Music Player</string>
    <string name="version" translatable="false">v1.3.0</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="folder">Folder</string>
    <string name="select_folder">Select Folder</string>
    <string name="player">Music Player</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="waiting_media_player_service">Waiting Media Player Service</string>
    <string name="ready">Ready</string>
    <string name="playing">Playing</string>
    <string name="paused">Paused</string>
    <string name="auto_play">Autoplay</string>
    <string name="play_in_random_order">Play in Random Order</string>
    <string name="about">About</string>
    <string name="author" translatable="false">Beeno Tung</string>
    <string name="removed_from_list">Removed From List</string>
    <string name="default_share_text" translatable="false">"         Checkout \"%1$s\" for free! You can play any music files in background :)                    Google Play:          https://play.google.com/store/apps/details?id=com.github.beenotung.musicplayer                    Direct Download:          https://github.com/beenotung/music-player/blob/master/release/music-player-release.apk?raw=true                    Website:          https://github.com/beenotung/music-player      "</string>
    <string name="share_text">Share Text</string>
    <string name="reset_share_text">Reset share text</string>
    <string name="empty_playlist">Playlist is empty. Please tap ≡ to select folders.</string>
    <string name="empty_folder">You have not selected any folder.</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
</resources>
